app/stylesheets/index.css
@import 'reset.css';

@font-face {
    font-family: 'Droid Sans';
    font-style: normal;
    font-weight: normal;
    src: local('Droid Sans'), local('DroidSans'),
         url(/fonts/DroidSans.woff) format('woff'),
         url(/fonts/DroidSans.ttf) format('truetype');
}

@font-face {
    font-family: 'Droid Sans';
    font-style: normal;
    font-weight: bold;
    src: local('Droid Sans Bold'), local('DroidSans-Bold'),
         url(/fonts/DroidSans-Bold_subset.woff) format('woff'),
         url(/fonts/DroidSans-Bold_subset.ttf) format('truetype');
}

@font-face {
    font-family: 'fontello';
    font-style: normal;
    font-weight: normal;
    src: url(/fonts/fontello.woff) format('woff'),
         url(/fonts/fontello.ttf) format('truetype');
}

@-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
}

@-moz-keyframes spin {
    0% { -moz-transform: rotate(0deg); }
    100% { -moz-transform: rotate(360deg); }
}

@-ms-keyframes spin {
    0% { -ms-transform: rotate(0deg); }
    100% { -ms-transform: rotate(360deg); }
}

@-o-keyframes spin {
    0% { -o-transform: rotate(0deg); }
    100% { -o-transform: rotate(360deg); }
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

* {
    cursor: default;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    user-select: none;
}

html, body, #load-screen {
    width: 100%;
    height: 100%;
}

html {
    background: black;
    overflow: hidden;
}

body {
    position: relative;
    font-family: 'Droid Sans', sans-serif;
    background: black;
}

#game {
    display: flex;
    flex-direction: column;
    max-width: 80vh;
    height: 100%;
    margin: 0 auto;
    color: black;
}

button, .button {
    cursor: pointer;
}

button, button:focus, button:hover, button:active {
    vertical-align: baseline;
    background: transparent;
    font: inherit;
    padding: 0;
    margin: 0;
    border: 0;
    outline: 0;
    color: inherit;
}

button:disabled {
    cursor: default;
    color: #777;
}

.toolbar {
    flex: auto;
    display: flex;
    align-items: flex-end;
}

.toolbar > * {
    box-sizing: border-box;
    padding: 1%;
}

.player-1.toolbar {
    background: rgb(255,127,0);
    transform: rotate(180deg);
}

.player-2.toolbar {
    background: rgb(0,127,255);
}

.toolbar .active, .toolbar .reset {
    width: 20%;
}

.toolbar .score {
    width: 60%;
    text-align: center;
    font-size: 150%;
}

.toolbar .reset {
    text-align: right;
    font-family: 'fontello';
}

#display {
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 100%;
    flex: none;
}

canvas.tiles, canvas.arrow, canvas.rot-anim, canvas.rubber-band {
    position: absolute;
    width: 100%;
    height: 100%;
}

#load-screen {
    position: absolute;
    background: black;
    top: 0;
}

/* container with square aspect ratio */
#load-screen>div {
    position: relative;
    top: calc(50% - 5vmin);
    left: calc(50% - 5vmin);
    width: 10vmin;
    height: 10vmin;
}

#load-screen>div>div.spinner {
    position: absolute;
    top: 25%;
    bottom: 25%;
    left: 45%;
    right: 45%;
    background: white;
}

.spinner {
    -webkit-animation-name: spin;
    -moz-animation-name: spin;
    -ms-animation-name: spin;
    -o-animation-name: spin;
    animation-name: spin;

    -webkit-animation-duration: 0.4s;
    -moz-animation-duration: 0.4s;
    -ms-animation-duration: 0.4s;
    -o-animation-duration: 0.4s;
    animation-duration: 0.4s;

    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -ms-animation-iteration-count: infinite;
    -o-animation-iteration-count: infinite;
    animation-iteration-count: infinite;

    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
    -ms-animation-timing-function: linear;
    -o-animation-timing-function: linear;
    animation-timing-function: linear;
}

canvas.rubber-band {
    cursor: crosshair;
}

button.reset {
    font-family: 'fontello';
    font-weight: normal;
    font-size: 100%;
}

